2008-08-04  Paul Bolle  <pebolle@tiscali.nl>

	** Further fix for bug #539268

	* em-format.c (em_format_describe_part): Do not append description 
	if it is just an empty string.

2008-08-04  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #249844

	* em-folder-tree.c (render_display_name):
	* mail-component.c (impl__get_userCreatableItems):
	Use C_() macro instead of Q_() macro. 
	Use fully qualified names for "New" submenu entries. 

2008-08-04  Paul Bolle  <pebolle@tiscali.nl>

	** Fixes bug #537088

	* em-format-html.c: (efh_format_headers): Break out of the loop rather
	that return from this function when running into an empty From: or
	Sender: header.

2008-08-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #514006

	* apps-evolution-mail-notification.schemas.in:
	Quote literal values.

2008-08-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #544859

	* evolution-mail.schemas.in:
	Clarify description of "sync_interval" key.

2008-08-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #545820

	* mail-ops.c (save_messages_desc): Fix a typo. (Nicolas Kaiser)

2008-07-31  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #545436

	* mail/message-list.c: Check the info before accessing it.

2008-07-30  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #500389

	* em-account-editor.c: (emae_option_options_changed),
	(emae_option_options), (emae_receive_options_extra_item):
	New ability to define Options (ComboBox) in provider's options.

2008-07-29  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-tree.c: Kill a compilation warning.

2008-07-28  Lucian Langa  <lucilanga@gnome.org>

	* mail/mail-config.glade:
	Corrected string "Prompt on sending HTML.."

2008-07-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #543532

	* em-folder-tree-model.c: (em_folder_tree_model_remove_store_info):
	Let free memory when we are done with it, not before.

2008-07-28  Milan Crha  <mcrha@redhat.com>
